# BashBuddy

./: .gitignore  README.md  pyproject.toml
BashBuddy/: .env.example  .gitignore  LICENSE  README.md  SETUP.md  pyproject.toml  test_setup.py
BashBuddy/src/bashbuddy/: __init__.py  __main__.py  ask.py  daemon.py  utils.py
BashBuddy/src/bashbuddy/cli/: __init__.py  actions.py  commands.py  display.py  formatting.py
BashBuddy/src/bashbuddy/core/: __init__.py  config.py  supabase_logger.py
BashBuddy/src/bashbuddy/daemon/: __init__.py  __main__.py  client.py  functions.py  manager.py  server.py
web/api-server-flask/: .gitignore
web/client/: index.html  package.json  vite.config.ts
web/client/src/: App.css  App.tsx  DatabaseExample.new.tsx  DatabaseExample.tsx  PromptForm.css  PromptForm.tsx  QuizComponent.css  QuizComponent.tsx  database.css
web/server/: app.py  database.py  gemini.py  prompt.py  requirements.txt
