[project]
name = "bashbuddy"
version = "0.1.0"
description = ""
authors = [
    {name = "Jannymo13",email = "jonkonichottil@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click (>=8.3.0,<9.0.0)"
]

[tool.poetry]
packages = [{include = "bashbuddy", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bb = "bashbuddy:test"

